--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Deploy Gaayong to Server
 
 on:
   push:
@@ -8,46 +8,22 @@ on:
       - 'pom.xml' # pom.xml 변경도 트리거
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    
+    # 리포지토리 코드 checkout - 로컬 검증용
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-
-      - name: Display files
-        run: ls -la target/
-
-      - name: Deploy to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.PORT }}
-          source: "target/ROOT.war"
-          target: "/tmp/"
-          strip_components: 0
-
-      - name: Execute deployment script
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.PORT }}
-          script: |
-            find /tmp -name "*.war" -type f
-            ls -la /tmp/
-            cd /tmp
-            /usr/bin/sh /home/jini/gaayong/script/deploy.sh
+    # SSH 접속 및 배포 스크립트 실행
+    - name: SSH Connection for Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.PORT }}
+        script: |
+          cd /home/jini/gaayong
+          ./script/deploy.sh
