--- a/src/main/resources/static/manifest.json
+++ b/src/main/resources/static/manifest.json
@@ -8,17 +8,17 @@
   "theme_color": "#292929",
   "icons": [
     {
-      "src": "/icons/icon-192x192.svg",
+      "src": "/icon/icon-192x192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "/icons/icon-512x512.svg",
+      "src": "/icon/icon-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     },
     {
-      "src": "/icons/maskable-icon.svg",
+      "src": "/icon/maskable-icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "maskable"
